Made footer links blurry and fixed video height

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,9 @@ body {
 
 .t-hind-font {
     font-family: 'Futura', 'Hind', sans-serif;
+}
+
+.t-blurry-text {
     text-transform: uppercase;
     color: transparent;
     text-shadow: 0 0 1px rgba(208,202,191, 1);
@@ -136,7 +139,6 @@ body {
 
 .t2 {
     font-size: 25px;
-    text-transform: uppercase;
     font-weight: 100;
 }
 
@@ -210,7 +212,7 @@ body {
     }
 
     .c-video {
-        height: 815px;
+        height: 840px;
     }
 
     .c-video__film {
